--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,5 @@
+APP_ENV=test
+
 # DATABASE
 DATABASE_URL="postgres://testuser:pass@localhost:5432/testdb"
 DATABASE_MAX_CONNECTIONS=5
@@ -6,19 +8,18 @@ DATABASE_MIN_CONNECTIONS=1
 # Web Service
 SVC_HOST=0.0.0.0
 
-SERVICE_PORT=8080
+SERVICE_PORT=8090
 SERVICE_HOST=${SVC_HOST}
 
 # RUST_LOG format: crate1=level1,crate2=level2,...
 # Controls log filtering per module:
-# - info       → default log level for the app
+# - debug       → default log level for the app
 # - sqlx=debug  → shows SQL statements and connection info
 # - tower_http=info → middleware-level logs
 # - axum::rejection=trace → logs full details for Axum rejections (like validation errors)
-RUST_LOG=info,sqlx=debug,tower_http=info,axum::rejection=trace,opentelemetry=info
+RUST_LOG=debug,sqlx=debug,tower_http=info,axum::rejection=trace
 
 # jwt
-# openssl rand -base64 32
 JWT_SECRET_KEY=your_jwt_secret_key_mRMNj0ubratwHOakMmfnRRDbnSD6U1kzf9IgPPRqrpk=
 
 # Asset Config
@@ -33,11 +34,3 @@ ASSETS_PRIVATE_URL=/assets/private
 # 50MB: 50 * 1024 * 1024 = 52428800
 ASSET_MAX_SIZE=52428800
 ASSET_ALLOWED_EXTENSIONS=jpg|jpeg|png|gif|webp|svg|mp4|mov|avi|wmv|flv|mkv|mp3|wav|ogg|opus|pdf|doc|docx|ppt|pptx|xls|xlsx|hwp|hwpx|txt|zip
-
-# -------------------------------------------------------
-# OpenTelemetry OTLP Exporter
-# -------------------------------------------------------
-
-# Jaeger OTLP/HTTP Receiver
-OTEL_EXPORTER_OTLP_ENDPOINT="http://localhost:4318/v1/traces"
-OTEL_EXPORTER_OTLP_PROTOCOL="http/protobuf"
