--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,13 +50,13 @@ repos:
         files: \.rs$
         pass_filenames: false
 
-      - id: cargo-clippy
-        name: cargo clippy
-        description: Lint rust sources
-        entry: bash -c 'cargo clippy --all-targets --all-features --tests --benches -- -D warnings'
-        language: rust
-        files: \.rs$
-        pass_filenames: false
+      # - id: cargo-clippy
+      #   name: cargo clippy
+      #   description: Lint rust sources
+      #   entry: bash -c 'cargo clippy --all-targets --all-features --tests --benches -- -D warnings'
+      #   language: rust
+      #   files: \.rs$
+      #   pass_filenames: false
 
       - id: cargo-test
         name: cargo test
