--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,65 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
+
 [dependencies]
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
+axum = { version = "0.8.3", features = ["multipart"] }
+tokio = { version = "1.37", features = ["full"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
+uuid = { version = "1.7.0", features = ["v4", "serde"] }
+sqlx = { version = "0.8.3", features = [
+    "postgres",
+    "runtime-tokio",
+    "macros",
+    "uuid",
+    "chrono",
+    "json",
+] }
+thiserror = "1.0.58"
+tower = { version = "0.5.2", features = ["timeout"] }
+tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
+utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
+utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
+async-trait = "0.1.88"
+regex = "1.11.1"
+tokio-util = "0.7.14"
+http-body-util = "0.1.3"
+validator = { version = "0.20.0", features = ["derive"] }
+rand = "0.9.0"
+argon2 = "0.5.3"
+jsonwebtoken = "9.3.1"
+chrono = "0.4.40"
+dotenvy = "0.15.7"
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = [
+    "env-filter",
+    "registry",
+    "std",
+    "fmt",
+    "chrono",
+] }
+
+# Optional OpenTelemetry-related crates (all `optional = true`)
+opentelemetry = { version = "0.30.0", optional = true }
+opentelemetry_sdk = { version = "0.30.0", optional = true }
+opentelemetry-otlp = { version = "0.30", features = [
+    "http-proto",
+], optional = true }
+opentelemetry-appender-tracing = { version = "0.30.0", optional = true }
+tracing-opentelemetry = { version = "0.31.0", optional = true }
+once_cell = "1.21.3"
+
+[features]
+opentelemetry = [
+    "dep:opentelemetry",
+    "dep:opentelemetry_sdk",
+    "dep:opentelemetry-otlp",
+    "dep:opentelemetry-appender-tracing",
+    "dep:tracing-opentelemetry",
+]
+
 
 
 
