--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -12,6 +12,8 @@ jobs:
   spelling:
     name: Spell Check with Typos
     runs-on: ubuntu-latest
+    env:
+      CARGO_TERM_COLOR: always
     steps:
     - name: Checkout Actions Repository
       uses: actions/checkout@v4
@@ -20,6 +22,8 @@ jobs:
 
   fmt:
     name: Rustfmt
+    env:
+      CARGO_TERM_COLOR: always
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -37,13 +41,14 @@ jobs:
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
+    env:
+      CARGO_TERM_COLOR: always
+      SQLX_OFFLINE: true
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
-          override: true
           components: clippy
       - uses: actions-rs/cargo@v1
         with:
