feat: refactor database interactions to use SeaORM
- Removed SQLx dependencies and replaced them with SeaORM for database operations across the file and user domains.
- Updated repository and service traits to use `DatabaseConnection` and `DatabaseTransaction` from SeaORM.
- Converted SQL queries to SeaORM entity methods for creating, reading, updating, and deleting records.
- Introduced new entity definitions for `devices`, `uploaded_files`, `user_auth`, and `users` using SeaORM.
- Adjusted data models and service implementations to accommodate the new entity structure and ORM methods.
- Enhanced error handling to utilize `DbErr` from SeaORM.

--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -43,13 +43,14 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CARGO_TERM_COLOR: always
-      SQLX_OFFLINE: true
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
+          toolchain: 1.88
           components: clippy
+          override: true
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
