--- a/.env
+++ b/.env
@@ -6,16 +6,16 @@ DATABASE_MIN_CONNECTIONS=1
 # Web Service
 SVC_HOST=0.0.0.0
 
-SERVICE_PORT=8080
+SERVICE_PORT=8012
 SERVICE_HOST=${SVC_HOST}
 
 # RUST_LOG format: crate1=level1,crate2=level2,...
 # Controls log filtering per module:
 # - info       → default log level for the app
-# - sqlx=debug  → shows SQL statements and connection info
+# - sea_orm=debug  → shows SQL statements and connection info
 # - tower_http=info → middleware-level logs
 # - axum::rejection=trace → logs full details for Axum rejections (like validation errors)
-RUST_LOG=info,sqlx=debug,tower_http=info,axum::rejection=trace,opentelemetry=info
+RUST_LOG=info,sea_orm=debug,tower_http=info,axum::rejection=trace,opentelemetry=info
 
 # jwt
 # openssl rand -base64 32
