--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 publish = false
 
 [workspace]
+members = [".", "migration"]
 exclude = [
     "subm/lustools/lust",
 ]
@@ -18,14 +19,15 @@ tokio = { version = "1.37", features = ["full"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
-sqlx = { version = "0.8.3", features = [
-    "postgres",
-    "runtime-tokio",
-    "macros",
-    "uuid",
-    "chrono",
-    "json",
+sea-orm = { version = "1", features = [
+  "sqlx-postgres",
+  "runtime-tokio-rustls",
+  "macros",
+  "with-chrono",
+  "with-uuid",
+  "with-json"
 ] }
+migration = { path = "migration" }
 thiserror = "1.0.58"
 tower = { version = "0.5.2", features = ["timeout"] }
 tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
