--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,12 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./db-seed:/docker-entrypoint-initdb.d
+      - ./db:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U testuser -d testdb"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   app:
     build:
@@ -18,7 +23,8 @@ services:
       dockerfile: Dockerfile
     container_name: clean_axum_app
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     ports:
       - "8080:8080"
     env_file:
