feat: Refactor authentication and user management
- Modified user authentication handler to use a new RegisterDto for user registration. Enhanced app initialization by linking AuthService with UserService.
- Added a new endpoint to retrieve the current user's information.
- Complete frontend API architecture unification and modernization.
- Replace jQuery AJAX calls with centralized API service architecture across all Vue components.Modernize authentication flow using async/await patterns with comprehensive API endpoint management and service layer abstraction. Implement unified error handling with automatic token expiration management and login redirection.
- Removed unused SQL query files related to user and file management. Deleted old database seed scripts for users and devices.
- Updated dependencies in Cargo.toml to include "normalize-path" feature for tower-http.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ sea-orm = { version = "1", features = [
 migration = { path = "migration" }
 thiserror = "1.0.58"
 tower = { version = "0.5.2", features = ["timeout"] }
-tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
+tower-http = { version = "0.6.2", features = ["cors", "trace", "fs", "normalize-path"] }
 utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
 utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
 async-trait = "0.1.88"
