--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ tracing-opentelemetry = { version = "0.31.0", optional = true }
 once_cell = "1.21.3"
 
 [features]
+open-register = []
 opentelemetry = [
     "dep:opentelemetry",
     "dep:opentelemetry_sdk",
