--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ thiserror = "1.0.58"
 tower = { version = "0.5.2", features = ["timeout"] }
 tower-http = { version = "0.6.2", features = ["cors", "trace", "fs", "normalize-path"] }
 utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
-utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
+utoipa-swagger-ui = { version = "9.0.1", features = ["axum"], optional = true }
 async-trait = "0.1.88"
 regex = "1.11.1"
 tokio-util = "0.7.14"
@@ -61,9 +61,11 @@ opentelemetry-otlp = { version = "0.30", features = [
 opentelemetry-appender-tracing = { version = "0.30.0", optional = true }
 tracing-opentelemetry = { version = "0.31.0", optional = true }
 once_cell = "1.21.3"
+md5 = "0.7.0"
 
 [features]
 open-register = []
+swagger = ["dep:utoipa-swagger-ui"]
 opentelemetry = [
     "dep:opentelemetry",
     "dep:opentelemetry_sdk",
